--- a/driver/BUILD.bazel
+++ b/driver/BUILD.bazel
@@ -302,7 +302,8 @@ compiler_module(
         "//bytecomp:__pkg__",
         "//tools:__pkg__",
         "//toplevel:__pkg__",
-        "//testsuite:__subpackages__"
+        "//testsuite:__subpackages__",
+        "//toplevel/native:__pkg__"
     ]
 )
 
